Added html contents

--- a/views/about.html
+++ b/views/about.html
@@ -32,12 +32,11 @@
 				<main class="col-md-12">
 
 
-
-					<!-- Start your code here -->
 					
-					
-					
-					<!-- End your code here  -->
+					<h1>Welcome to About Page</h1>
+					<hr>
+					<h3>About:</h3>
+					<p><Strong>Name:</Strong> Raakesh Balaji <br> <Strong>Student #:</Strong> 124518200 <br><strong>Porgram:</strong> Database Applicatin Developer</p>
 
 
 
