--- a/views/home.html
+++ b/views/home.html
@@ -32,14 +32,15 @@
 				<main class="col-md-12">
 
 
-
-					<!-- Start your code here -->
+					<h1>Welcome to my Website</h1> 
+					<p>I will be demonstrating HTML5 principles and techniques , Routing in Express.</p>
+					<hr>
+					<h3>Introduction</h3>
+					<p>This Site consists of 3 static views (<a href="/">Home</a> ,<a href="/about">About</a> ,<a href="/htmlDemo">HTML Demo</a>) as well as 5 routes that supply data, including: <a href="/employees">All Employees</a> , <a href = "/employees?department=3">Employes by Department</a> , <a href="/employee/3">A Single Employees By Employee Number</a> , <a href="/managers">All Managers</a> and <a href="/departments">All Departments.</a>Each link can be seen by clicking on it.</p>
+					<br>
+					<h3>HTML5</h3>
+					<p>This site utilizes HTML5: a markup language used for structuring and presenting content on the World Wide Web.The latest evolution of the standard which defines HTML is HTML5. Two different definitions are defined by the word. It's a modern version of the HTML language, with new features, attributes, and behaviors, and a wider range of technologies that make it possible to create websites and applications that are more diverse and efficient. Often this collection is called HTML5 & friends and also shortened to HTML5 only. (Source: <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5">HTML5</a>)</p>
 					
-					
-					
-					<!-- End your code here  -->
-
-
 
 				</main>
 			</div>
