--- a/views/htmlDemo.html
+++ b/views/htmlDemo.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+	
 	<head>
 		<title>WEB700</title>
 		<meta charset="UTF-8" />
@@ -33,15 +34,105 @@
 
 
 
-					<!-- Start your code here -->
-					
-					
-					
-					<!-- End your code here  -->
+				<h1>Welcome to Demo Page</h1>
+				<hr>
+				<h3>Tables:</h3>
+				<table border=3>
+					<caption>Seneca Campus locations</caption>
+					<thead>
+						<tr>
+						<th>College Name</th>
+						<th>Campus Location</th>
+						<th>Province</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Seneca</td>
+							<td>Newnham</td>
+							<td>Ontario</td>
+						</tr>
+						<tr>
+							<td>Seneca</td>
+							<td>King</td>
+							<td>Ontario</td>
+						</tr>
+						<tr>
+							<td>Seneca</td>
+							<td>Markham</td>
+							<td>Ontario</td>
+						</tr>
+					</tbody>
+				</table>
+				<br>
+				<table border= 3>
+					<caption>Numbers</caption>
+					<thead>
+						<tr>
+							<th>Team1</th>
+							<th>Team2</th>
+							<th>Team3</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>1</td>
+							<td>2</td>
+							<td>3</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>5</td>
+							<td>6</td>
+						</tr>
+						<tr>
+							<td>7</td>
+							<td>8</td>
+							<td>9</td>
+						</tr>
+					</tbody>
+				</table>
+				<p>The table1 shows the information about the seneca colleges with its location and province. The table2 shows information about the team consist of different numbers</p>
+				<hr>
+				<h3>Lists:</h3>
+				<ol>
+					<li>I am gonna fill something here</li>
+					<li><ul>
+						<li>315151</li>
+						<li>55131</li>
+						<li>651561</li>
+					</ul></li>
+					<li>Apex Legends</li>
+					<li><a href="https://www.youtube.com/">Youtube</a></li>
+					<li><a href="https://en.wikipedia.org/wiki/Main_Page">Wikipedia</a></li>
 
-
-
-				</main>
+				</ol>
+				<p>The list consist 5 list in it and the parent list is ordered list and I have unordered list in it with random numbers. last two items in list are links for youtube and wikipedia</p>
+				<hr>
+				<h3>Images:</h3>
+				<img src="https://cdn.pixabay.com/photo/2019/11/08/04/55/nose-4610466__340.jpg" alt="Giraffe">
+				<img src="https://cdn.pixabay.com/photo/2020/11/11/10/38/cat-5732087__340.jpg" alt="Kitten">
+				<img src ="https://cdn.pixabay.com/photo/2017/06/21/14/32/jellyfish-2427426__340.jpg" alt="Jellyfish">
+				<p>There are three images provided above. The first image is the image of giraffe mouth.The Second image is the image of a kitten. The third image is the image of the jellyfish</p>
+				<hr>
+				<h3>Audio:</h3>
+				<audio controls>
+					<source src="https://pat-crawford-sdds.netlify.app/shared/winter-2021/web700/A3/Track03.mp3" type="audio/mp4">
+						<source src="https://pat-crawford-sdds.netlify.app/shared/winter-2021/web700/A3/Track03.ogg" type="audio/ogg">
+							Your browser doesnt support HTML5 audio player.
+						</audio>
+				<p>This section provides the mp3 of the classical music. User can control the audio by playing and pausing.</p>
+				<hr>
+				<h3>Video:</h3>
+				<video width="320" height="240" controls>
+					<source src="https://pat-crawford-sdds.netlify.app/shared/winter-2021/web700/A3/movie.mp4" type="video/mp4">
+					<source src="https://pat-crawford-sdds.netlify.app/shared/winter-2021/web700/A3/movie.ogg" type="video/ogg">
+						<source src="https://pat-crawford-sdds.netlify.app/shared/winter-2021/web700/A3/movie.webm" type="video/webm">
+							Your browser doesnt support video player of html5
+						</video>
+					<p>This Section provides the video about the wildlife</p>
+			
+			</main>
 			</div>
 		</div>
 
