row span and col span

--- a/views/htmlDemo.html
+++ b/views/htmlDemo.html
@@ -48,19 +48,23 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>Seneca</td>
+							<td rowspan="3">Seneca</td>
 							<td>Newnham</td>
-							<td>Ontario</td>
+							<td rowspan="3">Ontario</td>
+							
 						</tr>
 						<tr>
-							<td>Seneca</td>
-							<td>King</td>
-							<td>Ontario</td>
+							
+							<td >King</td>
+							
 						</tr>
 						<tr>
-							<td>Seneca</td>
+							
 							<td>Markham</td>
-							<td>Ontario</td>
+							
+						</tr>
+						<tr>
+							<td colspan="3">More to be added...</td>
 						</tr>
 					</tbody>
 				</table>
@@ -82,13 +86,13 @@
 						</tr>
 						<tr>
 							<td>4</td>
-							<td>5</td>
+							<td rowspan="2">5</td>
 							<td>6</td>
 						</tr>
 						<tr>
 							<td>7</td>
 							<td>8</td>
-							<td>9</td>
+							
 						</tr>
 					</tbody>
 				</table>
