--- a/views/htmlDemo.html
+++ b/views/htmlDemo.html
@@ -134,7 +134,7 @@
 						<source src="https://pat-crawford-sdds.netlify.app/shared/winter-2021/web700/A3/movie.webm" type="video/webm">
 							Your browser doesnt support video player of html5
 						</video>
-					<p>This Section provides the video about the wildlife</p>
+					<p>This Section provides the video about the wildlife. User can control this player by playing and pausing</p>
 			
 			</main>
 			</div>
