--- a/views/about.html
+++ b/views/about.html
@@ -37,6 +37,7 @@
 					<hr>
 					<h3>About:</h3>
 					<p><Strong>Name:</Strong> Raakesh Balaji <br> <Strong>Student #:</Strong> 124518200 <br><strong>Porgram:</strong> Database Applicatin Developer</p>
+					<p>I love to Code >_</p>
 
 
 
