--- a/views/addEmployee.html
+++ b/views/addEmployee.html
@@ -114,10 +114,10 @@
                                 <div class="form-group">
                                     <label>Status:</label><br />
                                     <label class="checkbox-inline">
-                                        <input type="radio" value="Full Time" name="Status" /> Full Time
+                                        <input type="radio" value="Full Time" name="status" /> Full Time
                                     </label>
                                     <label class="checkbox-inline">
-                                        <input type="radio" value="Part Time" name="Status" /> Part Time
+                                        <input type="radio" value="Part Time" name="status" /> Part Time
                                     </label>
                                 </div>
                             </div>
