--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -49,7 +49,11 @@ a{
     color: rgb(255, 117, 4);
 }
 a:hover{
-    color : rgb(255, 0, 255);
+    color : rgb(255, 0, 255) !important;
+}
+
+a:visited{
+    color:rgb(167, 4, 39);
 }
 
 .btn {
